<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_a">

    <LinearLayout
        android:id="@+id/header"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="35dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btnClose"
                android:padding="9dp"
                app:tint="@color/white"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_add"
                android:layout_width="45dp"
                android:layout_height="45dp"/>

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"/>

            <ImageView
                android:visibility="gone"
                android:padding="9dp"
                app:tint="@color/white"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_add"
                android:layout_width="45dp"
                android:layout_height="45dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:text="@string/activity_add_title"
            android:gravity="center_vertical|center_horizontal"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:minHeight="45dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:background="@drawable/card_main_a"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/name"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:background="@drawable/card_b"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="#9F6B1D"
            android:hint="@string/activity_add_element_name"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <EditText
            android:id="@+id/description"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:lineSpacingExtra="10dp"
            android:background="@drawable/card_b"
            android:textColorHint="#9F6B1D"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:hint="@string/activity_add_element_description"
            android:inputType="textMultiLine"/>

        <EditText
            android:id="@+id/url"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@drawable/card_b"
            android:textColorHint="#9F6B1D"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/activity_add_element_url"
            android:inputType="textCapWords"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_save"
            android:layout_margin="10dp"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/card_a"
            android:text="@string/activity_add_element_btn"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:src="@drawable/dhr"
            android:alpha="0.25"
            app:tint="@color/white"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:alpha="0.2"
            app:tint="@color/white"
            android:src="@drawable/dhr_stars"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY" />

    </RelativeLayout>

</RelativeLayout>